@@ -1,0 +1,280 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u5065\u8eab\u623f\u696d\u4e3b\u6ce8\u610f\uff01\u672a\u4ed8\u7248\u6b0a\u8cbb\u6050\u906d\u4e94\u5e74\u5f92\u5211\u62165000\u842c\u97d3\u5143\u7f70\u6b3e\uff0c\u97d3\u570b\u97f3\u6a02\u8457\u4f5c\u6b0a\u5354\u6703\u558a\u505c\u6cd5\u5f8b\u884c\u52d5", "description": "\u5065\u8eab\u623f\u696d\u4e3b\u6ce8\u610f\uff01\u672a\u4ed8\u7248\u6b0a\u8cbb\u6050\u906d\u4e94\u5e74\u5f92\u5211\u62165000\u842c\u97d3\u5143\u7f70\u6b3e\uff0c\u97d3\u570b\u97f3\u6a02\u8457\u4f5c\u6b0a\u5354\u6703\u558a\u505c\u6cd5\u5f8b\u884c\u52d5", "url": "https://www.famechos.me/news/\u5065\u8eab\u623f\u696d\u4e3b\u6ce8\u610f\uff01\u672a\u4ed8\u7248\u6b0a\u8cbb\u6050\u906d\u4e94\u5e74\u5f92\u5211\u62165000\u842c\u97d3\u5143\u7f70\u6b3e\uff0c\u97d3\u570b\u97f3\u6a02\u8457\u4f5c\u6b0a\u5354\u6703\u558a\u505c\u6cd5\u5f8b\u884c\u52d5.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-12T11:28:19.484338+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/健身房業主注意！未付版權費恐遭五年徒刑或5000萬韓元罰款，韓國音樂著作權協會喊停法律行動.html"/>
+<meta name="description" content="韓國音樂著作權協會喊停法律行動，健身房業主注意！未付版權費恐遭五年徒刑或5000萬韓元罰款，了解最新發展與法律風險。">
+
+<meta name="keywords" content="健身房業主, 版權費, 韓國音樂著作權協會, 法律行動, 五年徒刑, 5000萬韓元罰款">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/健身房業主注意！未付版權費恐遭五年徒刑或5000萬韓元罰款，韓國音樂著作權協會喊停法律行動.html" />
+        <meta property="og:title" content="健身房業主注意！未付版權費恐遭五年徒刑或5000萬韓元罰款，韓國音樂著作權協會喊停法律行動" />
+        <meta property="og:description" content="健身房業主注意！未付版權費恐遭五年徒刑或5000萬韓元罰款，韓國音樂著作權協會喊停法律行動" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="健身房業主注意！未付版權費恐遭五年徒刑或5000萬韓元罰款，韓國音樂著作權協會喊停法律行動" />
+        <meta property="twitter:description" content="健身房業主注意！未付版權費恐遭五年徒刑或5000萬韓元罰款，韓國音樂著作權協會喊停法律行動" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <img class="famechos-logo" src="../img/famechos_logo.png">
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button>
+        </div>
+        <div class="nav-setting">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>健身房業主注意！未付版權費恐遭五年徒刑或5000萬韓元罰款，韓國音樂著作權協會喊停法律行動</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">12/10/2024</p>
+        </div>
+	<p>韓國音樂著作權協會（KOMCA）計劃改善版權意識，而不是對不遵守音樂版權法規的健身房業主採取法律行動。該協會主席Chu Ga-yeoul最近訪問了全國11個負責向健身房收取音樂版權費的中心，收集現場投訴。</p>
+<p>KOMCA認為，創造一個版權持有人和使用者可以共同繁榮的環境至關重要。因此，協會將繼續與健身房業主密切合作，建立一個公平的收取和分配版權費的系統。</p>
+<p>目前，全國約15,500家註冊健身房中，只有約7,800家至少支付過一次版權費，這意味著略多於一半的健身房遵守了2018年修訂的音樂版權法規。KOMCA根據文化體育觀光部批准的法規收取這些費用。</p>
+<p>許多健身房業主仍然不知道他們有義務支付版權費，這導致了未經授權的音樂使用。KOMCA補充說，這不僅使收取和分配創作者的基本版權費變得複雜，而且還導致了越來越多的與版權侵權相關的法律糾紛和投訴。</p>
+<p>未支付版權費的業主大多是小型健身房業主，他們經常獨自經營業務，對自己的義務一無所知。KOMCA計劃實施措施，以解決健身房行業的版權糾紛和投訴。健身房業主因播放受版權保護的音樂而被起訴</p>
+<p>近日，一位健身房業主在網上社區網站上分享了自己的經歷。他表示，自己因在健身房播放受版權保護的音樂而被警察起訴，最終不得不支付罰款。該業主稱，自己在開業當天並不知道需要支付版權費。</p>
+<p>另一位健身房業主也分享了類似的經歷。他表示，在自己開設健身房大約一周後，韓國音樂著作權協會（KOMCA）的官員來到自己的健身房，要求簽署支付定期音樂版權費的協議。</p>
+<p>健身房業主對音樂版權法規的無知導致了與KOMCA之間的法律糾紛。音樂版權法規規定，經營面積超過50平方米的健身房必須支付定期音樂版權費。如果未經授權播放受版權保護的音樂，健身房業主可能面臨五年徒刑或最高5000萬韓元（37,875美元）的罰款。</p>
+<p>為解決這些問題，KOMCA正在探索改革措施。該組織表示，目前正在與文化體育觀光部討論改革措施，以減輕健身房業主因版權法違反而面臨的挑戰。KOMCA計劃立即停止法律行動，並優先進行旨在提高版權意識的積極宣傳活動。</p>
+<table>
+<tr>
+<th>健身房面積</th>
+<th>音樂版權費</th>
+</tr>
+<tr>
+<td>超過50平方米</td>
+<td>需要支付定期音樂版權費</td>
+</tr>
+</table>
+<ul>
+<li>健身房業主因播放受版權保護的音樂而被起訴</li>
+<li>音樂版權法規規定，經營面積超過50平方米的健身房必須支付定期音樂版權費</li>
+<li>KOMCA正在探索改革措施，以減輕健身房業主因版權法違反而面臨的挑戰</li>
+</ul>
+<h2>健身行業與韓國音樂著作權協會的對話</h2>
+<p>韓國音樂著作權協會（KOMCA）強調，版權費對創作者的生計至關重要。該會希望與健身行業進行對話，尋找惠及音樂和健身行業的可持續發展路徑。</p>
+
+<p>資料來源：Korea Herald</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/0P0aQreFs8w" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/Jennie強勢回歸！BLACKPINK成員宣佈新單曲《Mantra》10月11日發行，能否再登告示牌榜單？.html">Jennie強勢回歸！BLACKPINK成員宣佈新單曲《Mantra》10月11日發行，能否再登告示牌榜單？</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/K-POP大爆炸！NCT DREAM、權志龍、BLACKPINK金珍妮、李知恩、Billlie強勢回歸，10月份演唱會巡迴、音樂新作齊發.html">K-POP大爆炸！NCT DREAM、權志龍、BLACKPINK金珍妮、李知恩、Billlie強勢回歸，10月份演唱會巡迴、音樂新作齊發</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/K-pop 偶像「假唱」爭議再起！舞台上究竟有多少真唱？.html">K-pop 偶像「假唱」爭議再起！舞台上究竟有多少真唱？</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <img class="famechos-logo-footer" src="../img/famechos_logo.png">
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <p class="footer-text">K-POP</p>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <p class="footer-text">J-POP</p>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <p class="footer-text">影視</p>
+        </div>
+        <div class="other-footer-box footer-box">
+          <p class="footer-text">其他</p>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
