@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sat, 12 Oct 2024 11:27:06 +0800</lastBuildDate>
+  <lastBuildDate>Sat, 12 Oct 2024 11:28:26 +0800</lastBuildDate>
 
   <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
@@ -145,5 +145,11 @@
   <description>今日KpopTXT將於下月回歸推出第七張迷你專輯TXTTOMORROWXTOGETHER將於11月4日回歸推出第七張迷你專輯TheStarChapterSanctuary這是該團第四個系列的首張專輯繼夢想混亂和名字之後這張迷你專輯距離該團上一張迷你專輯minisode3Tomorrow發行...</description>
   <category>K-Pop</category>
   <pubDate>Sat, 12 Oct 2024 11:27:06 +0800</pubDate>
+</item><item>
+  <title>健身房業主注意！未付版權費恐遭五年徒刑或5000萬韓元罰款，韓國音樂著作權協會喊停法律行動</title>
+  <link>https://www.famechos.me/news/健身房業主注意！未付版權費恐遭五年徒刑或5000萬韓元罰款，韓國音樂著作權協會喊停法律行動.html</link>
+  <description>音樂版權組織尋求與健身房合作解決方案韓國音樂著作權協會KOMCA計劃改善版權意識而不是對不遵守音樂版權法規的健身房業主採取法律行動該協會主席ChuGayeoul最近訪問了全國11個負責向健身房收取音樂版權費的中心收集現場投訴KOMCA認為創造一個...</description>
+  <category>K-Pop</category>
+  <pubDate>Sat, 12 Oct 2024 11:28:26 +0800</pubDate>
 </item></channel>
 </rss>
