@@ -146,4 +146,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/健身房業主注意！未付版權費恐遭五年徒刑或5000萬韓元罰款，韓國音樂著作權協會喊停法律行動.html</ns0:loc>
+    <ns0:lastmod>2024-10-12T11:28:26+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
