@@ -21,3 +21,4 @@ https://www.koreaherald.com/view.php?ud=20241001050062
 https://www.koreaherald.com/view.php?ud=20241008050607
 https://tokyocheapo.com/entertainment/movies-theatre/kanda-myojin-show/
 https://www.koreaherald.com/view.php?ud=20241003050085
+https://www.koreaherald.com/view.php?ud=20241007050635
